# trip-cluster

./: .env.example  .gitignore  README.md  itinerary.html  itinerary.json  pyproject.toml  scope.md
src/trip_cluster/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py
src/trip_cluster/cache/: __init__.py  sqlite.py
src/trip_cluster/clustering/: __init__.py  clusterer.py
src/trip_cluster/geocoding/: __init__.py  aliases.py  base.py  nominatim.py  query.py  service.py
src/trip_cluster/input/: __init__.py  parser.py
src/trip_cluster/matrix/: __init__.py  base.py  haversine.py  osrm.py  service.py  tomtom.py
src/trip_cluster/output/: __init__.py  _helpers.py  json_export.py  map_html.py  text.py
src/trip_cluster/routing/: __init__.py  ordering.py
tests/: conftest.py
tests/fixtures/: mock_matrix.json  sample_input.txt  san_diego.txt
tests/unit/: test_cache.py  test_cli.py  test_clustering.py  test_geocoding.py  test_geocoding_query.py  test_haversine.py  test_matrix.py  test_ordering.py  test_output.py  test_parser.py
